# game-engine

./: CMakeLists.txt  LICENSE  README.md
code/: CMakeLists.txt  mesh.cpp  mesh.hpp
code/base/: time.cpp
code/core/: CMakeLists.txt  geometry.hpp  mesh.cpp  mesh.hpp
code/core/core/: CMakeLists.txt  file.cpp  private.hpp  singleton.hpp
code/core/data/: camera.hpp  light.hpp
code/core/math/: CMakeLists.txt  functions.cpp  functions.hpp  mat4.cpp  mat4.hpp  private.hpp  vec3.cpp  vec3.hpp
code/core/vertex/: model.hpp  sprite.hpp
code/data/: camera.hpp  light.hpp  material.hpp
code/graphics/: CMakeLists.txt  model_renderer.cpp  model_renderer.hpp  sprite_renderer.cpp  sprite_renderer.hpp
code/graphics/core/: CMakeLists.txt  buffer_data.cpp  buffer_data.hpp  private.hpp
code/graphics/opengl/: CMakeLists.txt  buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  functions.hpp  functions_loader.cpp  macros.hpp  pipeline.cpp  pipeline.hpp  shader.cpp  shader.hpp  shader_stage.cpp  shader_stage.hpp  vertex_array.cpp  vertex_array.hpp
code/images/: CMakeLists.txt  tga_header.hpp  tga_loader.cpp  tga_loader.hpp
code/platform/: CMakeLists.txt
code/platform/core/: CMakeLists.txt  context.cpp  context.hpp  context_config.hpp  factory.hpp  private.hpp  window.cpp  window.hpp  window_config.hpp  window_factory.cpp  window_factory.hpp  window_manager.cpp  window_manager.hpp  window_size.hpp  window_state.hpp
code/platform/core/window/: config.hpp
code/platform/win32/: CMakeLists.txt  context.cpp  context.hpp  factory.cpp  factory.hpp  functions.hpp  functions_loader.cpp  functions_loader.hpp  functions_typedefs.hpp  macros.hpp  private.hpp  window.cpp  window.hpp  window_events.cpp  window_events.hpp
code/renderer/: CMakeLists.txt  model.cpp  model.hpp  sprite.cpp  sprite.hpp
code/tools/: CMakeLists.txt  sprite_generator.cpp  sprite_generator.hpp
code/vertex/: model.hpp  sprite.hpp  ui.hpp
modules/: CMakeLists.txt
modules/assets/: CMakeLists.txt  file.cpp  file.hpp
modules/assets/base/: CMakeLists.txt  file.cpp  file.hpp
modules/assets/core/: file.hpp
modules/core/: CMakeLists.txt  file.cpp  geometry.hpp  headers.hpp  image.hpp  time.hpp
modules/core/base/: CMakeLists.txt  geometry.hpp  time.hpp
modules/core/base/vertex/: model.hpp
modules/core/core/: CMakeLists.txt  file.cpp  file.hpp  geometry.hpp  headers.hpp  time.cpp  time.hpp
modules/core/core/base/: geometry.hpp
modules/core/core/primitive/: headers.hpp  line.hpp  triangle.hpp
modules/core/math/: CMakeLists.txt  column.cpp  column.hpp  constants.hpp  functions.cpp  functions.hpp  headers.hpp  mat4.cpp  mat4.hpp  quat.cpp  quat.hpp  rect.hpp  rgb.hpp  vec2.hpp  vec3.cpp  vec3.hpp
modules/core/primitive/: CMakeLists.txt  line.hpp  triangle.hpp
modules/core/primitives/: triangle.hpp
modules/graphics/: CMakeLists.txt  graphics.cpp  graphics.hpp  graphics_module.cpp  graphics_module.hpp  model_renderer.cpp
modules/graphics/base/: CMakeLists.txt  graphics_module.cpp  graphics_module.hpp
modules/graphics/base/buffer/: CMakeLists.txt  data.cpp  data.hpp  location.hpp
modules/graphics/base/vertex/: attribute.hpp
modules/graphics/buffer/: CMakeLists.txt  data.cpp  data.hpp  location.hpp
modules/graphics/buffers/: CMakeLists.txt  data.cpp  data.hpp  location.hpp
modules/graphics/core/: CMakeLists.txt  buffer.cpp  buffer.hpp  buffer_data.cpp  buffer_data.hpp  buffer_location.hpp  graphics.cpp  graphics.hpp  headers.hpp  vertex_attribute.hpp
modules/graphics/core/buffer/: CMakeLists.txt  data.cpp  data.hpp  location.hpp
modules/graphics/core/vertex/: attribute.hpp
modules/graphics/opengl/: CMakeLists.txt  buffer.cpp  buffer.hpp  commands.cpp  commands.hpp  functions.hpp  functions_loader.cpp  functions_loader.hpp  headers.hpp  macros.hpp  object.cpp  object.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  sampler.cpp  sampler.hpp  shader.cpp  shader.hpp  shader_stage.cpp  shader_stage.hpp  texture.cpp  texture.hpp  vertex_array.cpp  vertex_array.hpp
modules/graphics/vertex/: attribute.hpp
modules/math/: CMakeLists.txt  column.cpp  column.hpp  constants.hpp  functions.cpp  functions.hpp  headers.hpp  mat4.cpp  mat4.hpp  quat.cpp  quat.hpp  quaternion.cpp  quaternion.hpp  rect.hpp  rgb.hpp  vec2.hpp  vec3.cpp  vec3.hpp
modules/math/base/: CMakeLists.txt  column.cpp  column.hpp  headers.hpp  mat4.cpp  mat4.hpp  rgb.hpp  vec3.cpp  vec3.hpp
modules/math/core/: CMakeLists.txt  functions.cpp  functions.hpp  headers.hpp  mat4.cpp  mat4.hpp  vec3.cpp  vec3.hpp
modules/math/math/: CMakeLists.txt  functions.cpp  functions.hpp  headers.hpp
modules/platform/: CMakeLists.txt  platform.cpp  platform.hpp  platform_module.cpp  platform_module.hpp  window_callbacks.cpp  window_callbacks.hpp  window_events.cpp  window_events.hpp  window_manager.cpp  window_manager.hpp
modules/platform/base/: CMakeLists.txt  context.cpp  context.hpp  context_functions.hpp  factory.hpp  platform_factory.cpp  platform_factory.hpp  platform_module.cpp  platform_module.hpp  window.hpp  window_events.hpp  window_manager.cpp  window_manager.hpp
modules/platform/core/: CMakeLists.txt  context.cpp  context.hpp  factory.hpp  headers.hpp  platform.cpp  platform.hpp  platform_factory.cpp  platform_factory.hpp  window.hpp  window_callbacks.cpp  window_callbacks.hpp  window_events.hpp  window_manager.cpp  window_manager.hpp
modules/platform/win32/: CMakeLists.txt  context.cpp  context.hpp  context_functions.cpp  context_functions.hpp  context_macros.hpp  factory.cpp  factory.hpp  functions.hpp  macros.hpp  private.hpp  window.cpp  window.hpp  window_events.cpp  window_events.hpp
modules/platform/window/: CMakeLists.txt  size.cpp  size.hpp  state.hpp
modules/resources/: CMakeLists.txt  headers.hpp
modules/resources/base/: image.hpp
modules/resources/core/: CMakeLists.txt  image.hpp
modules/resources/image/: CMakeLists.txt  image.hpp  tga.cpp  tga.hpp  tga_header.hpp  tga_loader.cpp  tga_loader.hpp
modules/resources/images/: CMakeLists.txt  headers.hpp  tga.cpp  tga.hpp  tga_header.hpp
(+19 files in other folders)
