#=======================================================================================================================
add_library(engine)
#=======================================================================================================================
add_subdirectory(core)
add_subdirectory(tools)
#=======================================================================================================================
add_subdirectory(renderer)
#=======================================================================================================================