#=======================================================================================================================
               add_library(engine)
#=======================================================================================================================
target_include_directories(engine PUBLIC ${CMAKE_SOURCE_DIR})
     target_link_libraries(engine PUBLIC core graphics platform resources)
#=======================================================================================================================
          add_subdirectory(core)
#=======================================================================================================================
          add_subdirectory(tools)
          add_subdirectory(graphics)
#=======================================================================================================================