#=======================================================================================================================
               add_library(engine)
#=======================================================================================================================
target_include_directories(engine PUBLIC .)
     target_link_libraries(engine PUBLIC core graphics platform resources)
#=======================================================================================================================
          add_subdirectory(core)
#=======================================================================================================================
          add_subdirectory(graphics)
          add_subdirectory(tools)
#=======================================================================================================================