#=======================================================================================================================
add_subdirectory(assets)
#=======================================================================================================================
add_subdirectory(platform)
add_subdirectory(graphics)
#=======================================================================================================================
add_subdirectory(math)
#=======================================================================================================================