#=======================================================================================================================
add_subdirectory(core)
add_subdirectory(math)
#=======================================================================================================================
add_subdirectory(platform)
add_subdirectory(graphics)
#=======================================================================================================================