#=======================================================================================================================
add_subdirectory(core)
add_subdirectory(math)
#=======================================================================================================================
add_subdirectory(graphics)
add_subdirectory(platform)
#=======================================================================================================================