#=======================================================================================================================
target_include_directories(engine PUBLIC ..)
     target_link_libraries(engine PUBLIC core graphics platform resources)
#=======================================================================================================================