#=======================================================================================================================
project(engine_platform)
#=======================================================================================================================
add_library(${PROJECT_NAME})
#=======================================================================================================================
add_subdirectory(core)
add_subdirectory(win32)
#=======================================================================================================================