#=======================================================================================================================
project(assets_module)
#=======================================================================================================================
add_library(${PROJECT_NAME})
#=======================================================================================================================
add_subdirectory(base)
#=======================================================================================================================