#=======================================================================================================================
project(assets_module)
#=======================================================================================================================
add_library(${PROJECT_NAME})
#=======================================================================================================================
target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
target_precompile_headers(${PROJECT_NAME}  PUBLIC headers.hpp)
#=======================================================================================================================
target_sources(${PROJECT_NAME} PRIVATE file.cpp)
#=======================================================================================================================