#=======================================================================================================================
               add_library(core)
#=======================================================================================================================
target_include_directories(core PUBLIC ${CMAKE_SOURCE_DIR})
#=======================================================================================================================
<<<<<<<< HEAD:modules/core/CMakeLists.txt
          add_subdirectory(core)
#=======================================================================================================================
          add_subdirectory(math)
          add_subdirectory(primitive)
========
add_subdirectory(base)
add_subdirectory(math)
>>>>>>>> 3a9f8a2 (Reorganize file structure for core and math modules):modules/math/CMakeLists.txt
#=======================================================================================================================