#=======================================================================================================================
               add_library(core)
#=======================================================================================================================
target_include_directories(core PUBLIC ${CMAKE_SOURCE_DIR})
#=======================================================================================================================
          add_subdirectory(core)
#=======================================================================================================================
          add_subdirectory(math)
          add_subdirectory(primitive)
#=======================================================================================================================