#=======================================================================================================================
add_library(graphics)
#=======================================================================================================================
add_subdirectory(buffer)
add_subdirectory(opengl)
#=======================================================================================================================
target_include_directories(graphics PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_precompile_headers(graphics PUBLIC headers.hpp)
            target_sources(graphics PUBLIC graphics.cpp)
#=======================================================================================================================