#=======================================================================================================================
               add_library(graphics)
#=======================================================================================================================
target_include_directories(graphics PUBLIC .)
#=======================================================================================================================
          add_subdirectory(core)
#=======================================================================================================================
          add_subdirectory(opengl)
#=======================================================================================================================