#=======================================================================================================================
add_library(module_math)
#=======================================================================================================================
target_include_directories(module_math PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_precompile_headers(module_math PUBLIC headers.hpp)
#=======================================================================================================================
target_sources(module_math PRIVATE functions.cpp mat4.cpp column.cpp vec3.cpp quat.cpp)
#=======================================================================================================================