#=======================================================================================================================
add_library(platform)
#=======================================================================================================================
add_subdirectory(core)
add_subdirectory(win32)
#=======================================================================================================================
target_include_directories(platform PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})

#=======================================================================================================================