#=======================================================================================================================
               add_library(platform)
#=======================================================================================================================
target_include_directories(platform PUBLIC .)
#=======================================================================================================================
          add_subdirectory(core)
#=======================================================================================================================
          add_subdirectory(win32)
#=======================================================================================================================