#=======================================================================================================================
add_library(resources)
#=======================================================================================================================
add_subdirectory(image)
#=======================================================================================================================
target_include_directories(resources PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 target_precompile_headers(resources PUBLIC headers.hpp)
#=======================================================================================================================