#=======================================================================================================================
add_library(resources)
#=======================================================================================================================
add_subdirectory(core)
add_subdirectory(image)
#=======================================================================================================================