#=======================================================================================================================
               add_library(resources)
#=======================================================================================================================
target_include_directories(resources PUBLIC .)
#=======================================================================================================================
          add_subdirectory(core)
#=======================================================================================================================
          add_subdirectory(images)
          add_subdirectory(models)
#=======================================================================================================================