#=======================================================================================================================
add_subdirectory(buffer)
#=======================================================================================================================
target_include_directories(graphics PUBLIC ..)
 target_precompile_headers(graphics PUBLIC headers.hpp)
            target_sources(graphics PUBLIC graphics.cpp)
#=======================================================================================================================