#=======================================================================================================================
add_subdirectory(buffer)
#=======================================================================================================================
 target_precompile_headers(graphics PUBLIC headers.hpp)
            target_sources(graphics PUBLIC PRIVATE graphics.cpp)
#=======================================================================================================================