#=======================================================================================================================
target_precompile_headers(platform PUBLIC headers.hpp)
           target_sources(platform PUBLIC platform.cpp window_manager.cpp window_callbacks.cpp)
#=======================================================================================================================
         add_subdirectory(window)
#=======================================================================================================================
